<resources>
    <string name="app_name">Colleen</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_softkbd">Keyboard</string>
    <string name="menu_open">Open</string>
    <string name="menu_nextdisk">Next Side</string>
    <string name="warning">Warning</string>
    <string name="mountnodisk">File %s is not a disk image.\nContinue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mountdisk">Mount Image to Drive</string>
    <string name="unmountall">Unmount all drives</string>
    <string name="mountnextdisk">Image %s inserted</string>
    <string name="mountnextdiskerror">Cannot insert image %s</string>
    <string name="mountinsertdisk">Image %1$s inserted into drive D%2$d:</string>
    <string name="savestateoverwrite">Save state file \'%s\' already exists. OK to overwrite?</string>
    <string name="savestateerror">Error: Cannot save state</string>
    <string name="savestateok">State saved</string>
    <string name="mountnonextdisk">No next disk image found</string>
    <string name="diskboot">Booting image %s</string>
    <string name="errorboot">Cannot boot image %s</string>
    <string name="none">None</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="disabled">Disabled</string>
    <string name="slower">Slower</string>
    <string name="normal">Normal</string>
    <string name="faster">Faster</string>
	<string name="menu_preferences">Preferences</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
	<string name="cimcrash">The Atari computer has crashed.\n
							\nReset the machine or boot another image.</string>
	<string name="noromfoundrevert">Failed to initialize machine. Required ROM not found.\n
									\nYour machine change has been reverted.</string>
	<string name="noromfound">Failed to initialize machine. Required ROM not found.</string>
    <string name="pressback">Press \'Back\' once more to exit</string>
    <string name="welcome">Welcome to Colleen!</string>
	<string name="welcomenote">Hello,\n
							   \nJust a few tips to get you going:
							   \n1) Left hand joystick, right hand trigger (or search button).
							   \n2) Tap the top-right corner for console keys.
							   \n3) On Honeycomb (3.0)+ devices, tap near the screen\'s top for menu.
							   \n4) On earlier devices, hit \'Menu\' for preferences and more.
							   \n5) Long-press in the file selector to insert an image and not boot it.
							   \n6) Use the WiiController or the keyboard for accuracy.\n
							   \nFirst though, setup the Atari ROM path in the next dialog.\n
							   \nHave fun! </string>
    <string name="pathsetup">Atari ROM Path</string>
	<string name="pathsetupmsg"><![CDATA[
								Due to copyright limitations, the emulator cannot be distributed with
								original Atari system ROM images. It has free replacement system ROMs
								built in, but some Atari programs might fail to run with them. For best
								compatibility, configure the emulator to use original Atari ROMs.<br><br>
								<p>Touch <b>OK</b> to use the app\'s internal directory for ROM storage.<br>
								You can import ROM files later by selecting <b>Import ROM BIOS</b>
								in Preferences.<br><br>
								Try the
								<a href="http://atari800.github.io/download.html">Atari800 site</a>
								for the XL ROMs.<br>
								Valid ROM filenames are:<br>
								atariosa.rom - OS/A,
								atariosb.rom - OS/B,
								atarixl.rom - XL,
								ataribas.rom - XL Basic,
								5200.rom - 5200
								]]></string>
    <string name="loadingdir">Loading directory. Please wait...</string>
    <string name="selectdir">Select directory</string>
	<string name="rompatherror">Failed to initialize machine.\n
							  \nRequired ROM not found or path not accessible.</string>
	<string name="about">Colleen</string>
	<string name="aboutmsg"><![CDATA[
							<html><head></head><body>
							<p align="right"><font size="-1"><b>Package version: </b>%1$s<br>
								<b>Core version:</b>%2$s</font></p>
							<p align="center">original Android port by <i>Kostas Nakos</i><br>
								<a href="http://pocketatari.atari.org/android">
										http://pocketatari.atari.org/android</a><br>
								now developed by <i>Petr Stehlik</i><br>
								<a href="https://atari800.github.io">https://atari800.github.io</a><br>
								Copyright &copy; 1995-1998 <i>David Firth</i><br>
								Copyright &copy; 1998-2026 <i>Atari800 Development Team</i><br>
								<a href="http://atari800.atari.org">http://atari800.atari.org</a></p>
							<p align="justify"><font size="-1">This program is not affiliated with Atari Inc.
								Atari and the Atari logo are trademarks owned by Atari Interactive, Inc.
								All other trademarks are the property of their respective owners.</font></p>
							<p align="justify"><font size="-1">This program is free software; you can
								redistribute it	and/or modify it under the terms of the GNU General 
								Public License as published by the Free Software Foundation; either
								version 2, or (at your option) any later version.</font></p>
							</body></html>
							]]></string>
	<string name="changesv1_1a"><![CDATA[
							<i>Changes for version 1.1a:</i>
							<br>This version is a quick fix for a regression to the <i>Anchor Joystick</i>
								preference, introduced in v1.1.<br><br>
							<i>Version 1.1 changelog follows:</i>
							<br><b>*</b> Fix a crash when sound was switched off
							<br><b>*</b> Added support for .com and .exe files
							<br><b>*</b> Added the auto frameskip option
							<br><b>*</b> Added the new <i>Joystick Grace Area</i> preference
							<br>Thanks to the bug/feature reporters!
							]]></string>
	<string name="changesv1_2"><![CDATA[
							<i>Changes for version 1.2:</i><br>
							<br><b>*</b> New disk management menu (long press in the file selector)
							<br><b>*</b> New screen cropping preferences
							<br><b>*</b> New arrow key derotation preference for external keyboards
							<br><b>*</b> DPAD-CENTER and tilde (~) now map to Escape key
							<br><b>*</b> Atari800 core version 2.2.0
							<br><b>*</b> Fix rare sound-related crashes
							<br><b>*</b> Various fixes and improvements
							<br><br>Thanks to the bug/feature reporters!
							]]></string>
	<string name="preftitle_graphics">Graphics</string>
	<string name="preftitle_emulation">Emulation</string>
	<string name="preftitle_input">Input</string>
	<string name="preftitle_sound">Sound</string>
	<string name="preftitle_about">About</string>
    <string name="pref_aspect">Aspect</string>
    <string name="pref_aspect_sum">Maintain aspect for scaling the screen</string>
    <string name="pref_bilinear">Bilinear Scaling</string>
    <string name="pref_bilinear_sum">Filter scaled screen</string>
    <string name="pref_artifact">Artifacting</string>
	<string name="pref_artifact_sum">Emulate TV artifacts</string>
    <string name="pref_machine">Machine Type</string>
    <string name="pref_machine_sum">Select machine to emulate</string>
    <string name="pref_speed">Show Atari Speed</string>
    <string name="pref_speed_sum">Percentage of real Atari speed</string>
    <string name="pref_disk">Show Drive Access</string>
    <string name="pref_disk_sum">Display disk drive number for ongoing accesses</string>
    <string name="pref_sector">Show Sector Access</string>
    <string name="pref_sector_sum">Display disk sector number for ongoing accesses</string>
    <string name="pref_frameskip">Frameskip</string>
    <string name="pref_frameskip_sum">Screen repaint frequency</string>
    <string name="pref_collisions">Accurate Collisions</string>
    <string name="pref_collisions_sum">Calculate collisions in skipped frames</string>
    <string name="pref_basic">Disable BASIC</string>
    <string name="pref_basic_sum">Simulate holding OPTION key down when booting</string>
    <string name="pref_softjoy">Keyboard Joystick</string>
	<string name="pref_softjoy_sum">Emulate joystick w/ hardware keyboard/Wii Remote</string>
	<string name="pref_keydefscr">Configure Keyboard</string>
	<string name="pref_keydefscr_sum">Define keyboard joystick keys</string>
	<string name="pref_up">Up</string>
	<string name="pref_down">Down</string>
	<string name="pref_left">Left</string>
	<string name="pref_right">Right</string>
	<string name="pref_fire">Fire</string>
	<string name="pref_joysize">Joystick Area Size</string>
	<string name="pref_joysize_sum">Enlarge/Shrink on-screen joystick</string>
	<string name="pref_joyvisible">Joystick Visible</string>
	<string name="pref_joyvisible_sum">Show the on-screen joystick</string>
	<string name="pref_joyrighth">Right-Handed Joystick</string>
	<string name="pref_joyrighth_sum">Exchange on-screen joystick/fire button areas</string>
	<string name="pref_joydeadband">Joystick Deadband</string>
	<string name="pref_joydeadband_sum">Joystick deflections lower than this will not register</string>
	<string name="pref_joymidx">Joystick Screen Split</string>
	<string name="pref_joymidx_sum">Horizontal percentage of screen allocated to on-screen joystick</string>
	<string name="pref_joyopacity">Joystick Opacity</string>
	<string name="pref_joyopacity_sum">Alpha blend factor for the on-screen joystick</string>
	<string name="pref_sound">Sound</string>
	<string name="pref_sound_sum">Enable sound emulation</string>
	<string name="pref_mixrate">Mix Rate</string>
	<string name="pref_mixrate_sum">Sound generation frequency</string>
	<string name="pref_sound16bit">16bit Sound</string>
	<string name="pref_sound16bit_sum">Toggle between 8bit/16bit sound generation</string>
	<string name="pref_hqpokey">High Quality Sound</string>
	<string name="pref_hqpokey_sum">Use high quality POKEY emulation</string>
	<string name="pref_keymapmsg2">Step 2:\nType the key of the Atari to assign to this action in
								   the next box (1 character only)</string>
	<string name="pref_keymapmsg2note">NOTE:\nUse the hardware keyboard to type in the box. If you have 
									   enabled the Wiicontroller IME, please temporarily disable it by long
									   pressing in the box and select the standard IME. The virtual keyboard
									   subsequently will show up when you select the text box above. Please
									   remember to re-set the WiiController IME when finished.</string>
	<string name="pref_typeatarikey">Type Atari key</string>
	<string name="pref_mixbufsize">Sound Buffer Size</string>
	<string name="pref_mixbufsize_sum">Lower for lower latency, higher to get rid of clicks</string>
	<string name="pref_about">About</string>
	<string name="pref_about_sum">Colleen credits</string>
	<string name="pref_help">Help</string>
	<string name="pref_help_sum">Android port instructions</string>
	<string name="pref_anchor">Anchor Joystick</string>
	<string name="pref_anchor_sum">Fix on-screen joystick to current position</string>
	<string name="pref_joygrace">Joystick Grace Area</string>
	<string name="pref_joygrace_sum">Area extension around the joystick which results in no recentering</string>
	<string name="pref_crophoriz">Crop Horizontally</string>
	<string name="pref_crophoriz_sum">Width in pixels of original screen to show</string>
	<string name="pref_cropvert">Crop Vertically</string>
	<string name="pref_cropvert_sum">Height in pixels of original screen to show</string>
	<string name="pref_derotkeys">Derotate Arrow Keys</string>
	<string name="pref_derotkeys_sum">Fix external keyboard arrow keys when display is rotated</string>
</resources>