<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:jub="http://schemas.android.com/apk/res/name.nick.jubanka.atari800">

	<PreferenceCategory android:title="@string/preftitle_graphics">
		<ListPreference
			android:key="aspect"
			android:title="@string/pref_aspect"
			android:summary="@string/pref_aspect_sum"
			android:entries="@array/aspect"
			android:entryValues="@array/aspect_values"
			android:defaultValue="0"/>
		<CheckBoxPreference
			android:key="bilinear"
			android:title="@string/pref_bilinear"
			android:summary="@string/pref_bilinear_sum"
			android:defaultValue="false"/>
		<ListPreference
			android:key="artifact"
			android:title="@string/pref_artifact"
			android:summary="@string/pref_artifact_sum"
			android:entries="@array/artifact"
			android:entryValues="@array/artifact_values"
			android:defaultValue="0"/>
		<ListPreference
			android:key="frameskip"
			android:title="@string/pref_frameskip"
			android:summary="@string/pref_frameskip_sum"
			android:entries="@array/frameskip"
			android:entryValues="@array/frameskip_values"
			android:defaultValue="0"/>
		<CheckBoxPreference
			android:key="collisions"
			android:title="@string/pref_collisions"
			android:summary="@string/pref_collisions_sum"
			android:defaultValue="true"/>
		<name.nick.jubanka.atari800.SliderPreference
			android:key="crophoriz"
			android:title="@string/pref_crophoriz"
			android:summary="@string/pref_crophoriz_sum"
			android:defaultValue="336"
			jub:suffix=""
			jub:min="320"
			jub:max="336"/>
		<name.nick.jubanka.atari800.SliderPreference
			android:key="cropvert"
			android:title="@string/pref_cropvert"
			android:summary="@string/pref_cropvert_sum"
			android:defaultValue="240"
			jub:suffix=""
			jub:min="192"
			jub:max="240"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preftitle_emulation">
		<ListPreference
			android:key="machine"
			android:title="@string/pref_machine"
			android:summary="@string/pref_machine_sum"
			android:entries="@array/machine"
			android:entryValues="@array/machine_values"
			android:defaultValue="7"/>
		<Preference
			android:key="rompath"
			android:title="@string/pref_rompath"
			android:summary="@string/pref_rompath_sum"/>
		<CheckBoxPreference
			android:key="basic"
			android:title="@string/pref_basic"
			android:summary="@string/pref_basic_sum"
			android:defaultValue="true"/>
		<CheckBoxPreference
			android:key="speed"
			android:title="@string/pref_speed"
			android:summary="@string/pref_speed_sum"
			android:defaultValue="false"/>
		<CheckBoxPreference
			android:key="disk"
			android:title="@string/pref_disk"
			android:summary="@string/pref_disk_sum"
			android:defaultValue="true"/>
		<CheckBoxPreference
			android:key="sector"
			android:title="@string/pref_sector"
			android:summary="@string/pref_sector_sum"
			android:defaultValue="false"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preftitle_input">
		<CheckBoxPreference
			android:key="softjoy"
			android:title="@string/pref_softjoy"
			android:summary="@string/pref_softjoy_sum"
			android:defaultValue="false"/>
		<PreferenceScreen
			android:key="keydefscr"
			android:title="@string/pref_keydefscr"
			android:summary="@string/pref_keydefscr_sum"
			android:dependency="softjoy">
			<name.nick.jubanka.atari800.KeymapPreference
				android:key="up"
				android:title="@string/pref_up"
				android:dialogTitle="@string/pref_up"
				android:negativeButtonText="@string/cancel"
				android:defaultValue="254"/>
			<name.nick.jubanka.atari800.KeymapPreference
				android:key="down"
				android:title="@string/pref_down"
				android:dialogTitle="@string/pref_down"
				android:negativeButtonText="@string/cancel"
				android:defaultValue="253"/>
			<name.nick.jubanka.atari800.KeymapPreference
				android:key="left"
				android:title="@string/pref_left"
				android:dialogTitle="@string/pref_left"
				android:negativeButtonText="@string/cancel"
				android:defaultValue="252"/>
			<name.nick.jubanka.atari800.KeymapPreference
				android:key="right"
				android:title="@string/pref_right"
				android:dialogTitle="@string/pref_right"
				android:negativeButtonText="@string/cancel"
				android:defaultValue="251"/>
			<name.nick.jubanka.atari800.KeymapPreference
				android:key="fire"
				android:title="@string/pref_fire"
				android:dialogTitle="@string/pref_fire"
				android:negativeButtonText="@string/cancel"
				android:defaultValue="50"/>
		</PreferenceScreen>
		<ListPreference
			android:key="derotkeys"
			android:title="@string/pref_derotkeys"
			android:summary="@string/pref_derotkeys_sum"
			android:entries="@array/derotkeys"
			android:entryValues="@array/derotkeys_values"
			android:defaultValue="0"/>
		<CheckBoxPreference
			android:key="joyvisible"
			android:title="@string/pref_joyvisible"
			android:summary="@string/pref_joyvisible_sum"
			android:defaultValue="true"/>
		<name.nick.jubanka.atari800.SliderPreference
			android:key="joyopacity"
			android:title="@string/pref_joyopacity"
			android:summary="@string/pref_joyopacity_sum"
			android:dependency="joyvisible"
			android:defaultValue="25"
			jub:min="10"
			jub:max="90"/>
		<name.nick.jubanka.atari800.SliderPreference
			android:key="joysize"
			android:title="@string/pref_joysize"
			android:summary="@string/pref_joysize_sum"
			android:defaultValue="15"
			jub:min="10"
			jub:max="32"/>
		<CheckBoxPreference
			android:key="joyrighth"
			android:title="@string/pref_joyrighth"
			android:summary="@string/pref_joyrighth_sum"
			android:defaultValue="false"/>
		<CheckBoxPreference
			android:key="anchor"
			android:title="@string/pref_anchor"
			android:summary="@string/pref_anchor_sum"
			android:defaultValue="false"/>
		<name.nick.jubanka.atari800.SliderPreference
			android:key="joymidx"
			android:title="@string/pref_joymidx"
			android:summary="@string/pref_joymidx_sum"
			android:defaultValue="65"
			jub:min="50"
			jub:max="80"/>
		<name.nick.jubanka.atari800.SliderPreference
			android:key="joydeadband"
			android:title="@string/pref_joydeadband"
			android:summary="@string/pref_joydeadband_sum"
			android:defaultValue="35"
			jub:min="20"
			jub:max="60"/>
		<name.nick.jubanka.atari800.SliderPreference
			android:key="joygrace"
			android:title="@string/pref_joygrace"
			android:summary="@string/pref_joygrace_sum"
			android:defaultValue="50"
			jub:min="10"
			jub:max="99"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preftitle_sound">
		<CheckBoxPreference
			android:key="sound"
			android:title="@string/pref_sound"
			android:summary="@string/pref_sound_sum"
			android:defaultValue="true"/>
		<ListPreference
			android:key="mixrate"
			android:title="@string/pref_mixrate"
			android:summary="@string/pref_mixrate_sum"
			android:entries="@array/mixrate"
			android:entryValues="@array/mixrate_values"
			android:defaultValue="44100"
			android:dependency="sound"/>
		<name.nick.jubanka.atari800.SliderPreference
			android:key="mixbufsize"
			android:title="@string/pref_mixbufsize"
			android:summary="@string/pref_mixbufsize_sum"
			android:defaultValue="10"
			jub:suffix="0ms"
			jub:min="10"
			jub:max="40"/>
		<CheckBoxPreference
			android:key="sound16bit"
			android:title="@string/pref_sound16bit"
			android:summary="@string/pref_sound16bit_sum"
			android:defaultValue="false"
			android:dependency="sound"/>
		<CheckBoxPreference
			android:key="hqpokey"
			android:title="@string/pref_hqpokey"
			android:summary="@string/pref_hqpokey_sum"
			android:defaultValue="false"
			android:dependency="sound"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preftitle_about">
		<Preference
			android:key="about"
			android:title="@string/pref_about"
			android:summary="@string/pref_about_sum"/>
		<Preference
			android:key="help"
			android:title="@string/pref_help"
			android:summary="@string/pref_help_sum"/>
	</PreferenceCategory>

		<!--
			 save/load states?
			 reset to default?
			 save state on exit (state/disk/none)?
			 mouse?
		-->
</PreferenceScreen>
