<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:padding="10dp"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TextView
			android:id="@+id/header"
			android:text="@string/pref_keymapmsg2"
			android:textAppearance="@android:style/TextAppearance.Medium"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/keyinput"
			android:hint="@string/pref_typeatarikey"
			android:lines="1"
			android:maxLines="1"
			android:maxLength="1"
			android:inputType="textNoSuggestions"
			android:imeOptions="actionDone"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="6dp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		<TextView
			android:id="@+id/note"
			android:text="@string/pref_keymapmsg2note"
			android:textAppearance="@android:style/TextAppearance.Small"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>
</ScrollView>
